--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
     margin: 0;
     box-sizing: border-box;
 }
+body{
+    width: 100vw;
+}
 .logo{
     width: 50%;
     padding-left: 100px;
@@ -11,6 +14,9 @@
     width:40%;
     align-items: center;
 
+}
+.nav_text{
+    font-weight: 450;
 }
 .op{
     padding-right: 20px;
@@ -31,19 +37,19 @@
 }
 .mh1{
     font-weight: 450;
-    font-size: 60px;
+    font-size: 58px;
     padding-top: 30px;
 }
 .mh2{
     font-weight: 600;
-    font-size: 60px;
+    font-size: 58px;
     -webkit-text-stroke: 2px black;
 }
 .acst{
 
     width: 300px;
     border-radius: 30px;
-    
+    padding: 10px;
 }
 
 .acst:hover{
@@ -55,7 +61,7 @@
     
 }
 .fst-card{
-width: 30%;
+width: 50%;
 }
 .fn{
     height: 50px;
@@ -64,12 +70,59 @@ width: 30%;
     border-radius: 30px;
     border: 2px solid gray;
     animation: cd 2s linear infinite alternate;
+    margin-inline: auto;
 }
 @keyframes cd{
   0%{
-    box-shadow: 0px 0px 100px rgb(252, 211, 217);
+    box-shadow: 0px 0px 100px rgb(250, 191, 200);
   }
   100%{
-    box-shadow: 0px 0px 100px rgb(158, 205, 243);
+    box-shadow: 0px 0px 100px rgb(108, 174, 240);
   }
+}
+.sec3{
+    background-color: #ecf8ff;
+}
+.s3p{
+    color:rgb(85, 6, 159);
+    text-transform: capitalize;
+}
+.crd_2{
+ position:relative;
+}
+.mpp{
+    position:absolute;
+    height:15px;
+    font-size: 5px;
+    margin-inline: auto;
+    top:-7px;
+    font-size: 10px;
+    border-radius: 10px;
+    padding-bottom: 10px;
+}
+.smc{
+ background-color: #ecf8ff !important;
+}
+.d_list{
+    width: 90%;
+   margin-inline: auto;
+}
+.d_list>table{
+    width: 100%;
+    text-align: left;
+}
+.trb{
+    border-bottom: 1px solid gray;
+   
+}
+.trb>td{
+    width: 50%;
+}
+.sec3btn{
+    width: 40%;
+    border-radius: 20px;
+}
+.smc2{
+    background-color: #ffeed8 !important;
+    color: #975502 !important;
 }
