--- a/style.css
+++ b/style.css
@@ -9,13 +9,14 @@ body{
 }
 .logo{
     width: 50%;
-    padding-left: 100px;
+    
 }
 .navber{
     position: sticky;
     top:0;
     background-color: white;
     z-index: 1;
+    
 }
 .navop{
     width:40%;
@@ -98,6 +99,15 @@ width: 50%;
 }
 .sec3{
     background-color: #ecf8ff;
+}
+.applybtn{
+    width: 83%;
+    height: 70px;
+    margin: auto;
+    padding: auto;
+    font-weight: 400;
+    color: white !important;
+    background: linear-gradient(to right, rgba(153, 47, 237, 1), rgba(47, 128, 237, 1));
 }
 .s3p{
     background: linear-gradient(to right, rgba(153, 47, 237, 1), rgba(47, 128, 237, 1));
@@ -209,4 +219,155 @@ width: 50%;
     font-family: "ABeeZee", sans-serif;
     font-weight: 400;
     font-style: normal;
+}
+body> button> *{
+    font-size: small;
+   
+}
+.btnhw{
+   height: auto;
+}
+#btn{
+
+    transition: background-color 1s ease;
+}
+#btn:hover{
+    box-shadow: 0px 0px 20px yellow;
+    border-radius: 30px;
+    background-color: rgba(56, 144, 191, 0.671);
+    color:white !important;
+}
+@media screen and (max-width:820px){
+   *{
+    box-sizing: border-box;
+   }
+    .header{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .logo{
+        padding: 0;
+        display: flex;
+        justify-content: center;
+    }
+    .navber {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding:0;
+        font-size: small;
+      }
+    
+      .navop {
+        flex-direction: column;
+        width: 100%;
+
+      }
+      .op{
+        padding: 10px;
+      }
+      .nav_bt{
+        padding-left: 0px !important;
+        margin-inline:auto;
+        padding-bottom: 10px;
+      }
+    .nav_text{
+        font-size: 2rem;
+    }
+    #section2{
+        flex-direction: column;
+        font-size: smaller;
+        padding-inline: 0 !important;
+        background-image: none;
+        justify-content: center;
+        margin: auto;
+    }
+    #s2d1{
+        width: 100vw;
+        padding:5px !important;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+    }
+    #fst-card {
+        display: block;
+        height: 100vh;
+        justify-content: center;
+        align-items: center;
+       
+    }
+    #child_crd{
+        display: block;
+        width: 100%;
+        margin-inline: auto;
+        
+    }
+    #card_1{
+        width: 80vw!important;
+        height:auto;
+        display: block;
+        margin-inline: auto;
+           
+    }
+    #card_1>*{
+        width: 75vw !important;
+        padding: auto;
+        font-size: 20px;
+        
+    }
+    #course{
+        flex-direction: column;
+        justify-content: center;
+    
+    }
+    #Main_course_1{
+        display: flex;
+        flex-direction: column;
+        width: 90vw !important;
+        justify-content: center;
+        align-items: center;
+        margin-inline: auto;
+        margin-bottom: 20px;
+    }
+    #Main_course_2{
+        display: flex;
+        flex-direction: column;
+        width: 90vw !important;
+        justify-content: center;
+        align-items: center;
+        margin-inline: auto !important;
+        margin-bottom: 20px;
+    }
+    .s4but{
+        width: 50%;
+    }
+    .grid{
+        display: flex;
+        flex-direction: column;
+    }
+    .grid>div>img{
+        width:80vw;
+    }
+    #S4{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+    }
+    #company{
+        border: 2px solid blue;
+        margin: 10px;
+        width: 50%;
+        height: 25vh;
+        overflow: scroll;
+    }
+    #company>img{
+        height: 110%;
+        width: 150%;
+    }
 }
